# Rune

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/rune/: Cargo.toml
crates/rune/src/: ast.rs  diagnostic.rs  hdl.rs  hotreload.rs  interp.rs  ir.rs  lexer.rs  lib.rs  loader.rs  parser.rs  span.rs  typeck.rs  verilog.rs
crates/rune/tests/: golden.rs  hdl.rs  hotreload.rs  stdlib.rs  verilog_golden.rs
crates/rune/tests/snapshots/: verilog_golden__add8.snap  verilog_golden__alu.snap  verilog_golden__skips.snap
crates/runec/: Cargo.toml
crates/runec/src/: main.rs  pkg.rs  repl.rs
crates/runec/tests/: cli.rs  pkg.rs
docs/: ir.md  verilog.md
examples/: alu.rune  arrays.rune  bitops.rune  factorial.rune  fib.rune  milestone.rune  modules.rune  shapes.rune
examples/pkg/demo/: rune.toml
examples/pkg/demo/src/: main.rune
examples/pkg/mathx/: rune.toml
examples/pkg/mathx/src/: main.rune
std/: bits.rune  math.rune
